--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TFG basado en crear una aplicación capaz de crear audiodescripciones",
   "main": "index.js",
   "dependencies": {
-    "electron": "^22.1.0"
+    "electron": "^22.1.0",
+    "electron-reload": "^2.0.0-alpha.1"
   },
   "devDependencies": {},
   "scripts": {
