--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "electron-reload": "^2.0.0-alpha.1"
   },
   "devDependencies": {
-    "electron": "^22.2.0"
+    "electron": "^22.2.0",
+    "promise-mysql": "^5.2.0"
   },
   "scripts": {
     "start": "electron src/main.js"
