--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "TFG basado en crear una aplicación capaz de crear audiodescripciones",
   "main": "index.js",
   "dependencies": {
-    "@electron/remote": "^2.0.9"
+    "@electron/remote": "^2.0.9",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "electron": "^22.3.0",
     "electron-reload": "^2.0.0-alpha.1",
-    "ffmpeg": "0.0.4",
-    "promise-mysql": "^5.2.0"
+    "ffmpeg": "0.0.4"
   },
   "scripts": {
     "start": "electron src/main.js"
