--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ffprobe": "^1.1.2",
     "fluent-ffmpeg": "^2.1.2",
     "mysql": "^2.18.1",
-    "node-ffprobe": "^3.0.0"
+    "node-ffprobe": "^3.0.0",
+    "spin.js": "^4.1.1"
   },
   "devDependencies": {
     "electron": "^22.3.0",
