--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "mysql": "^2.18.1",
     "node-ffprobe": "^3.0.0",
+    "plyr": "^3.7.3",
     "spin.js": "^4.1.1"
   },
   "devDependencies": {
