--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mysql": "^2.18.1",
     "node-ffprobe": "^3.0.0",
     "plyr": "^3.7.3",
+    "responsivevoice": "^0.4.1",
     "spin.js": "^4.1.1"
   },
   "devDependencies": {
