--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "mysql": "^2.18.1",
     "node-ffprobe": "^3.0.0",
     "plyr": "^3.7.3",
-    "responsivevoice": "^0.4.1",
     "spin.js": "^4.1.1"
   },
+  "permissions": [
+    "media",
+    "speech-*"
+  ],
   "devDependencies": {
-    "electron": "^22.3.0",
+    "electron": "^22.3.2",
     "electron-reload": "^2.0.0-alpha.1"
   },
   "scripts": {
