--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@electron/remote": "^2.0.9",
     "audio-recorder-polyfill": "^0.4.1",
     "browserfy": "^1.0.0",
-    "browserify": "^5.13.1",
     "buffer": "^6.0.3",
     "ffmpeg-static-electron": "^2.0.3",
     "ffprobe": "^1.1.2",
@@ -17,7 +16,7 @@
     "plyr": "^3.7.3",
     "set-value": "^4.1.0",
     "spin.js": "^4.1.1",
-    "waud.js": "^1.0.3"
+    "stream-to-buffer": "^0.1.0"
   },
   "permissions": [
     "media",
