--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "@electron/remote": "^2.0.9",
     "audio-recorder-polyfill": "^0.4.1",
     "browserfy": "^1.0.0",
+    "browserify": "^5.13.1",
     "buffer": "^6.0.3",
     "ffmpeg-static-electron": "^2.0.3",
     "ffprobe": "^1.1.2",
     "fluent-ffmpeg": "^2.1.2",
     "mysql": "^2.18.1",
     "node-ffprobe": "^3.0.0",
+    "node-wav": "0.0.2",
     "plyr": "^3.7.3",
     "set-value": "^4.1.0",
     "spin.js": "^4.1.1",
-    "stream-to-buffer": "^0.1.0"
+    "sweetalert": "^2.1.2",
+    "waud.js": "^1.0.3"
   },
   "permissions": [
     "media",
