--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-ffprobe": "^3.0.0",
     "node-wav": "0.0.2",
     "plyr": "^3.7.3",
+    "recordrtc": "^5.6.2",
     "set-value": "^4.1.0",
     "spin.js": "^4.1.1",
     "sweetalert": "^2.1.2",
