--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "blob-polyfill": "^7.0.20220408",
     "browserfy": "^1.0.0",
     "buffer": "^6.0.3",
+    "electron-dl": "^3.5.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static-electron": "^2.0.3",
     "ffprobe": "^1.1.2",
