--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mysql": "^2.18.1",
     "node-ffprobe": "^3.0.0",
     "plyr": "^3.7.3",
+    "say": "^0.16.0",
+    "say.js": "^1.4.0",
     "speech-synthesis-recorder": "^1.2.1",
     "sweetalert": "^2.1.2",
     "wavefile": "^11.0.0"
